add api admin management courses and posts and api external